remove use of methods that didn't exist in java 8